--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vrisa-mobile",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -15,12 +15,15 @@
     "expo-router": "~6.0.17",
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
-    "nativewind": "^4.2.1",
+    "nativewind": "^2.0.11",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "tailwindcss": "^3.4.18"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "babel-preset-expo": "^54.0.8"
+  }
 }
