--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "tailwindcss": "^3.4.18"
+    "tailwindcss": "3.3.2"
+  },
+  "resolutions": {
+    "react": "19.1.0"
   },
   "private": true,
   "devDependencies": {
