--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~54.0.27",
     "expo-constants": "~18.0.11",
     "expo-linking": "~8.0.10",
@@ -29,6 +31,8 @@
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "babel-preset-expo": "^54.0.8"
+    "@babel/runtime": "^7.28.4",
+    "babel-preset-expo": "^54.0.8",
+    "react-refresh": "^0.18.0"
   }
 }
