--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~54.0.27",
     "expo-constants": "~18.0.11",
+    "expo-file-system": "~19.0.20",
     "expo-linking": "~8.0.10",
     "expo-router": "~6.0.17",
     "expo-secure-store": "~15.0.8",
+    "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
     "nativewind": "^2.0.11",
     "react": "19.1.0",
