--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~54.0.27",
     "expo-constants": "~18.0.11",
+    "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.20",
     "expo-linking": "~8.0.10",
     "expo-router": "~6.0.17",
