--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "expo-secure-store": "~15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
+    "lucide-react-native": "^0.556.0",
     "nativewind": "^2.0.11",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "tailwindcss": "3.3.2"
   },
   "resolutions": {
